--- a/ica/ica-reshaping.qmd
+++ b/ica/ica-reshaping.qmd
@@ -3,6 +3,9 @@ title: "Reshaping"
 format: html
 ---
 
+Use this file for practice with the **reshaping** in-class activity. Refer to the class website for details.
+
+
 ## Warm-Up {.unnumbered}
 
 ### Exercise 1 {.unnumbered}
