--- a/ica/ica-factors.qmd
+++ b/ica/ica-factors.qmd
@@ -103,4 +103,62 @@ elections |>
     geom_density_ridges(alpha=0.5) + 
     scale_fill_manual(values = c("blue", "purple", "red"))
 ```
+## Exercises {.unnumbered}
+
+```{r}
+# Get rid of some duplicate rows!
+grades <- read.csv("https://mac-stat.github.io/data/grades.csv") |> 
+  distinct(sid, sessionID, .keep_all = TRUE)
+
+# Check it out
+head(grades)
+```
+```{r}
+grade_distribution <- grades |> 
+  count(grade)
+
+head(grade_distribution)
+```
+
+### Exercise 1 {.unnumbered}
+```{r}
+# a column plot (height of the bar is based on a variable in the dataset)
+grade_distribution |>
+  ggplot(aes(x=grade, y=n))+
+  geom_col()
+```
+```{r}
+# reorder grades
+grade_distribution |>
+  mutate(grade = fct_relevel(grade, c("A", "A-", "B+", "B", "B-", "C+", "C", "C-", "D+", "D", "D-", "NC", "S","AU"))) |>
+  ggplot(aes(x=grade, y=n))+
+  geom_col()
+```
+
+```{r}
+# in order of ascending frequency
+grade_distribution |>
+  mutate(grade = fct_reorder(grade, n)) |>
+  ggplot(aes(x=grade, y = n))+
+  geom_col()
+
+```
+```{r}
+# in order of descending frequency
+grade_distribution |>
+  mutate(grade = fct_reorder(grade, n, .desc=TRUE)) |>
+  ggplot(aes(x = grade, y = n))+
+  geom_col()
+```
+
+### Exercise 2 {.unnumbered}
+
+```{r, fig.height=5, fig.width=8}
+grade_distribution |>
+  mutate(grade = fct_relevel(grade, c("A", "A-", "B+", "B", "B-", "C+", "C", "C-", "D+", "D", "D-", "NC", "S", "AU"))) |>
+  mutate(grade = fct_recode(grade, "Audit" = "AU", "Satisfactory" = "S")) |>
+  ggplot(aes(x = grade, y = n))+
+  geom_col()+
+  labs(x = "Grade", y = "Number of Students")
+```
 
