--- a/bw/Solo-Project.qmd
+++ b/bw/Solo-Project.qmd
@@ -11,7 +11,7 @@ library(mosaic)
 library(sf)
 library(tigris)
 
-
+options(tigris_use_cache = TRUE)
 elevators <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/refs/heads/main/data/2022/2022-12-06/elevators.csv")
 
 zcta_sf <- zctas(cb = FALSE)
@@ -20,14 +20,14 @@ zcta_sf <- zctas(cb = FALSE)
 
   
 
+# Data Wrangling {.unnumbered}
 
 ```{r}
 # clean Elevators data
 elevators2 <- elevators |>
   filter(ZIP_CODE != "0",
          ZIP_CODE != "99999",
-         `Device Status` == "A",
-         `Device Type` == "Passenger Elevator (P)") |>
+         `Device Status` == "A") |>
   mutate(ZIP_CODE = str_sub(ZIP_CODE,0,5)) |>
   group_by(ZIP_CODE) |>
   mutate(n = n()) 
@@ -40,6 +40,7 @@ zcta_sf2 <- zcta_sf |>
 
 # joins datasets
 elevators3 <- elevators2 |>
+  filter(`Device Type` == "Passenger Elevator (P)") |>
   group_by(ZIP_CODE) |>
   summarize(n = n()) |>
   left_join(zcta_sf2, join_by(ZIP_CODE == zip)) 
@@ -48,24 +49,32 @@ elevators3 <- elevators2 |>
 ```
 
 
+# Spatial Viz {.unnumbered}
 
 ```{r, fig.width=9, fig.height=7}
+#| fig.alt: "Choropleth map showing the number of active passenger elevators in each New York City zip code."
 # make the map
 
 elevators3 |>
   ggplot()+
-  geom_sf(aes(geometry = geometry, fill = n))+
+  geom_sf(aes(geometry = geometry, fill = n),
+          color = "black",
+          linewidth = 0.01)+
   theme_dark()+
-  scale_fill_gradientn(name = "Number of \nElevators", colors = c("white","#c1e3a8","darkolivegreen2","darkgreen","#0c360a"), values = scales::rescale(seq(0,5, by = 0.1)))+
+  scale_fill_gradientn(name = "Number of \nElevators", colors = c("white","#d1e3a8","darkolivegreen2","darkgreen","#0c360a"), values = scales::rescale(seq(0,5, by = 0.1)))+
   labs(title = "Passenger Elevators in NYC by Zip Code",
        subtitle = "Active Elevators only",
        caption = "Elevator Data from Tidy Tuesday (week of 12/06/2022) || Map Data from US Census Bureau TIGER/Line Shapefiles")+
   theme(
     plot.title = element_text(color="green4", face = "bold", size = 25, hjust = 0.5),
     plot.subtitle = element_text(hjust = 0.5, size = 13, face = "italic"),
-    plot.caption = element_text(size = 10))
+    plot.caption = element_text(size = 10),
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())
+
 
 ```
-
 
 
